the first commit

--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -7,8 +7,12 @@
 </head>
 <body>
 <h1>Design your taco!</h1>
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out"/>
+</form>
 <img width="400" height="450" th:src="@{/images/tako.jpg}"/>
 <form method="POST" th:object="${design}">
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
     <div class="grid">
         <div class="ingredient-group" id="wraps">
             <h3>Designate your wrap:</h3>
