--- a/src/main/resources/templates/orderForm.html
+++ b/src/main/resources/templates/orderForm.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <form method="POST" th:action="@{/orders}" th:object="${order}">
+    <input type="hidden" name="_csrf" th:value="${_csrf.token}"/>
     <h1>Order your taco creations!</h1>
     <img width="400" height="450" th:src="@{/images/tako.jpg}"/>
     <a th:href="@{/design}" id="another">Design another taco</a><br/>
@@ -46,9 +47,9 @@
     <span class="validationError" th:if="${#fields.hasErrors('ccNumber')}" th:errors="*{ccNumber}">CC Num Error</span>
     <br/>
 
-    <label for="ccExpiration">Expiration: </label>
-    <input type="text" th:field="*{ccExpiration}"/>
-    <span class="validationError" th:if="${#fields.hasErrors('ccExpiration')}" th:errors="*{ccExpiration}">ccExpiration Error</span>
+    <label for="phone_number">phone_number: </label>
+    <input type="text" th:field="*{phone_number}"/>
+    <span class="validationError" th:if="${#fields.hasErrors('phone_number')}" th:errors="*{phone_number}">phone_number Error</span>
     <br/>
 
     <label for="ccCVV">CVV: </label>
